ui-tests/tests/ui/double_comma.stderr
error: expected an identifier, but found `,`
 --> $DIR/double_comma.rs:6:18
  |
6 |     string = "x",,
  |                  ^
